--- a/Elementa/res/layout/activity_player_stats.xml
+++ b/Elementa/res/layout/activity_player_stats.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="@drawable/parchment"
     tools:context="com.example.elementa.PlayerStatsActivity" >
 
     <!--
@@ -20,7 +20,8 @@
         android:text="@string/dummy_content"
         android:textColor="#33b5e5"
         android:textSize="50sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:typeface="sans" />
 
     <!--
          This FrameLayout insets its children based on system windows using
