--- a/Elementa/res/layout/activity_player_stats.xml
+++ b/Elementa/res/layout/activity_player_stats.xml
@@ -10,8 +10,7 @@
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc.
     -->
-
-    <TextView
+<TextView
         android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,13 +19,20 @@
         android:text="@string/dummy_content"
         android:textColor="#33b5e5"
         android:textSize="50sp"
-        android:textStyle="bold"
-        android:typeface="sans" />
-
+        android:textStyle="bold" />
     <!--
          This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows.
     -->
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="327dp"
+        android:layout_height="123dp"
+        android:layout_gravity="bottom|center_horizontal"
+        android:text="@string/app_name"
+        android:textColor="@color/Black"
+        android:textSize="65sp" />
 
     <FrameLayout
         android:layout_width="match_parent"
